[package]
name = "guacamole-runner"
version = "0.1.0"
authors = ["EllenNyan <supbscripter@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vermarine-lib = { path = "../vermarine-lib/vermarine-lib" }
rand = "0.7"